feat: tornar execuções de agentes diagnosticáveis
